correcoes pontuais nos capitulos

--- a/elementos-textuais/capitulo-3-cronograma.tex
+++ b/elementos-textuais/capitulo-3-cronograma.tex
@@ -24,7 +24,7 @@ revisitar esse tópico.
 Esse período inicial de estruturação se mostrou essencial para assegurar uma base 
 sólida para iniciar o desenvolvimento. A parte de desenvolvimento técnica se 
 iniciou com a organização da implementação do sistema no dia 20 de maio de 2024 
-e, com base nisso, se iniciou a codificação do aplicativo no dia 1º de junho do mesmo ano. 
+e, com base nisso, se iniciou a codificação do aplicativo no dia 1º de julho do mesmo ano. 
 
 Inicialmente, o desenvolvimento tinha um planejamento de conclusão para o final 
 de outubro, porém, embora as atividades tenham progredido conforme o cronograma, 
@@ -35,7 +35,7 @@ a aplicação adquirisse uma maturidade maior. Com isso, o prazo final de codifi
 foi replanejado para o início de maio de 2025 (Tabela ~\ref{tab:cronograma}).
 
 A parte de redação da parte escrita do trabalho de conclusão foi iniciada 
-paralelamente com a codificação para obter uma documentação mais precisa 
+no mês de junho para obter uma documentação mais precisa 
 do processo e estava planejada para ser concluída até o final de novembro 
 de 2024, porém, também foi afetada pelo replanejamento. Em vermelho na 
 Tabela ~\ref{tab:cronograma} podemos ver que esta etapa foi realizada dentro 
@@ -58,7 +58,7 @@ tempo apresentada, desde o início até a entrega final planejada.
 \begin{table}[ht]
 \centering
 \renewcommand{\arraystretch}{1.5}
-\setlength{\tabcolsep}{4pt} 
+\setlength{\tabcolsep}{4pt}
 \resizebox{\textwidth}{!}{
 \begin{tabular}{|>{\bfseries}l|*{11}{>{\centering\arraybackslash}p{1.6cm}|}}
 \hline
@@ -67,7 +67,7 @@ Meses & \rotatebox{90}{Reunião def. de escopo} & \rotatebox{90}{Definição de 
 Mar/24 & \cellcolor{gray!30} & & & & & & & & & & \\ \hline
 Abr/24 & & \cellcolor{gray!30} & & & & & & & & & \\ \hline
 Mai/24 & & & \cellcolor{gray!30} & \cellcolor{gray!30} & \cellcolor{gray!30} & \cellcolor{gray!30} & & & & & \\ \hline
-Jun/24 & & & \cellcolor{gray!30} & & \cellcolor{gray!30} & \cellcolor{gray!30} & \cellcolor{gray!30} & \cellcolor{gray!30} & & & \\ \hline
+Jun/24 & & & \cellcolor{gray!30} & & \cellcolor{gray!30} & \cellcolor{gray!30} & & \cellcolor{gray!30} & & & \\ \hline
 Jul/24 & & & \cellcolor{gray!30} & & \cellcolor{gray!30} & & \cellcolor{gray!30} & \cellcolor{gray!30} & & & \\ \hline
 Ago/24 & & & & & \cellcolor{gray!30} & & \cellcolor{gray!30} & \cellcolor{gray!30} & & & \\ \hline
 Set/24 & & & & & & & \cellcolor{gray!30} & \cellcolor{gray!30} & & & \\ \hline
