--- a/elementos-textuais/capitulo-4-referencial-teorico.tex
+++ b/elementos-textuais/capitulo-4-referencial-teorico.tex
@@ -27,7 +27,7 @@ A implementação da Agenda 2030 requer a mobilização de recursos e uma Parcer
 
 Os ODS são um conjunto de 17 metas estabelecidas pelas Nações Unidas para abordar os principais desafios de desenvolvimento no Brasil e em todo o mundo. Esses objetivos visam criar um futuro mais justo, equitativo e sustentável para todos \cite{onu2015ods}. São eles:
 
-\begin{enumerate}
+\begin{itemize}
     \item \textbf{ODS 1}: Erradicação da Pobreza: Acabar com a pobreza em todas as suas formas, em todos os lugares.
     \item \textbf{ODS 2}: Fome Zero e Agricultura Sustentável: Garantir a segurança alimentar, melhorar a nutrição e promover a agricultura sustentável.
     \item \textbf{ODS 3}: Saúde e Bem-Estar: Assegurar uma vida saudável e promover o bem-estar para todas as idades.
@@ -45,7 +45,7 @@ Os ODS são um conjunto de 17 metas estabelecidas pelas Nações Unidas para abo
     \item \textbf{ODS 15}: Vida Terrestre: Proteger, restaurar e promover o uso sustentável dos ecossistemas terrestres, gerir florestas de forma sustentável, combater a desertificação e deter a perda de biodiversidade.
     \item \textbf{ODS 16}: Paz, Justiça e Instituições Eficazes: Promover sociedades pacíficas e inclusivas para o desenvolvimento sustentável, proporcionar acesso à justiça para todos e construir instituições eficazes, responsáveis e inclusivas em todos os níveis.
     \item \textbf{ODS 17}: Parcerias e Meios de Implementação: Fortalecer os meios de implementação e revitalizar a parceria global para o desenvolvimento sustentável.
-\end{enumerate}
+\end{itemize}
 
 Os itens acima são um apelo global visando acabar com a pobreza, proteger o meio ambiente e o clima e garantir que as pessoas, em todos os lugares, possam desfrutar de paz e de prosperidade. São objetivos nos quais as Nações Unidas estão contribuindo para atingir a Agenda 2030 no Brasil \cite{onu2015ods}.
 
@@ -76,6 +76,6 @@ O Kanban é um método de gestão de fluxo de trabalho que fornece uma visualiza
 \section{Jira}
 % ---
 
-O Jira é um \textit{software} comercial de gerenciamento de projetos desenvolvido pela empresa Atlassian. Ele permite a criação, acompanhamento e gerência de tarefas e projetos a partir de uma interface personalizável que suporta diversas metodologias ágeis como Scrum e Kanban, facilitando a colaboração e comunicação durante o desenvolvimento.
+O \textit{Jira} é um \textit{software} comercial de gerenciamento de projetos desenvolvido pela empresa Atlassian. Ele permite a criação, acompanhamento e gerência de tarefas e projetos a partir de uma interface personalizável que suporta diversas metodologias ágeis como Scrum e Kanban, facilitando a colaboração e comunicação durante o desenvolvimento.
 
 A ferramenta pode ser usada para planejar \textit{sprints}, atribuir tarefas, acompanhar \textit{bugs}, gerar relatórios e analisar o desempenho da equipe. Ele possui integração com uma variedade de ferramentas de desenvolvimento e oferece funcionalidades para personalizar fluxos de trabalho, campos e painéis, tornando-o adaptável às necessidades específicas de cada projeto ou organização.
