--- a/elementos-textuais/capitulo-5-trabalhos-correlatos.tex
+++ b/elementos-textuais/capitulo-5-trabalhos-correlatos.tex
@@ -1,4 +1,4 @@
-\chapter{Trabalhos Correlatos}\label{trabalhos-correlatos}
+\chapter{Estudo de Aplicações Correlatas}\label{trabalhos-correlatos}
 
 Com o intuito de contextualizar e ter uma melhor visão de onde posicionar o projeto dentro do campo de pesquisa escolhido, foi realizada uma seleção de trabalhos correlatos, cujos principais critérios de aceitação incluíram a abordagem de temas como: monitoramento de fauna, desenvolvimento sustentável, gestão ambiental e ciência cidadã. Garantindo assim, relevância e alinhamento do projeto com as necessidades e avanços da área.
 
@@ -22,7 +22,7 @@ O Sistema de Informação em Saúde Silvestre (SISS-Geo) da FIOCRUZ é desenvolv
   \label{fig:sisgeoApp}
 \end{figure}
 
-A aplicação \textit{mobile} foi lançada em 2014 e está disponível tanto para IOS quanto para Android (Figura~\ref{fig:sisgeoApp}) e possui mais de 10.000 downloads, com avaliação média de 4,7/5 baseada em 116 avaliações de usuários. Foram registrados, até 26 de março de 2024, 33 mil registros e quase 13 mil usuários colaboradores.
+A aplicação \textit{mobile} foi lançada em 2014 e está disponível tanto para iOS quanto para Android (Figura~\ref{fig:sisgeoApp}) e possui mais de 10.000 downloads, com avaliação média de 4,7/5 baseada em 116 avaliações de usuários. Foram registrados, até 26 de março de 2024, 33 mil registros e quase 13 mil usuários colaboradores.
 
 O sistema é bem consolidado e amplamente utilizado no Brasil, possuindo uma ótima aceitação entre especialistas e cidadãos em diversas regiões do país. Apesar de possuir opções para identificação de dados da fauna costeira, estes se mostram limitados quando comparados com os demais biomas. Ao alterar a escala de análise, é possível perceber, com um recorte mais detalhado do cordão litorâneo, que este não é o principal foco da aplicação e, atualmente, ela possui uma participação muito maior nas regiões continentais (Figura~\ref{fig:sisgeoMap}).
 
@@ -62,7 +62,7 @@ O fluxo de funcionamento da aplicação se inicia com a morte de algum animal em
 
 Apesar de ter alcançado importantes números de aceitação e uso entre 2014 e 2023, atualmente o sistema se encontra desativado e indisponível para download em todas as plataformas e seu site se encontra fora do ar.
 
-Em contato com o coordenador do projeto Alex Brag por e-mail, foi informado de que o Sistema Urubu foi desativado devido a falta de recursos. Segundo seu relato, além dos custos para manter a aplicação no ar com investimentos contínuos, os aplicativos de ciência cidadã requerem muita comunicação e relacionamento com os participantes, o que torna a estrutura mais complexa e custosa.
+Em contato com o coordenador do projeto Alex Bager por e-mail, foi informado de que o Sistema Urubu foi desativado devido a falta de recursos. Segundo seu relato, além dos custos para manter a aplicação no ar com investimentos contínuos, os aplicativos de ciência cidadã requerem muita comunicação e relacionamento com os participantes, o que torna a estrutura mais complexa e custosa.
 
 % ---
 \section{SIMBA}\label{simba}
