--- a/elementos-textuais/capitulo-7-estado-atual.tex
+++ b/elementos-textuais/capitulo-7-estado-atual.tex
@@ -7,17 +7,17 @@
 O CECLIMAR realiza o monitoramento da fauna costeira por meio de registros enviados pela comunidade, 
 por pesquisadores em campo e por profissionais do Corpo de Bombeiros Militar. Atualmente, o processo 
 ocorre de forma manual, como ilustrado na Figura~\ref{fig:fluxo_detalhado}. Esta abordagem envolve 
-várias etapas intermediárias e depende de diversas tarefaz manuais de mais de um profissional, trazendo
-uma maior probabilidade de erros e inconsistências nos dados coletadosm, além de aumentar o tempo
+diversas etapas intermediárias e tarefas manuais realizadas por diferentes profissionais, trazendo
+uma maior probabilidade de erros e inconsistências nos dados coletados, além de aumentar o tempo
 de processamento e análise das informações.
 
-\section{Descrição do Fluxo de Trabalho atual}
+\section{Descrição do Fluxo de Trabalho Atual}
 
-O fluxo de trabalho atual pode ser descrito em etapas principais:
+O fluxo de trabalho pode ser descrito em etapas principais:
 
 \begin{enumerate}
     \item \textbf{Envio de dados:} Os participantes enviam fotos e informações descritivas a partir de diversas fontes.
-    \item \textbf{Triagem inicial:} Um pesquisador analisa as mensagens recebidas a partir de uma análise ativa em cada uma das fontes e seleciona os dados relevantes.
+    \item \textbf{Triagem inicial:} Um pesquisador analisa as mensagens recebidas por meio de análise manual em cada uma das fontes e seleciona os dados relevantes.
     \item \textbf{Registro:} A bolsista transcreve os dados válidos para uma planilha eletrônica.
     \item \textbf{Armazenamento de imagens:} As fotos dos registros são manualmente salvas em uma pasta no Google Drive com o id do registro na tabela.
     \item \textbf{Validação:} O gestor revisa periodicamente os dados para verificar consistências e erros.
@@ -25,7 +25,7 @@ O fluxo de trabalho atual pode ser descrito em etapas principais:
 
 A Figura~\ref{fig:fluxo_detalhado} apresenta o fluxo de trabalho atual de maneira esquemática, 
 destacando as principais etapas e interações entre os envolvidos no processo de coleta e registro de dados.
-Como é possível ver na Tabela ~\ref{tab:contagem_ocorrencias}, atualmente, a maioria (48,45\%) dos dados 
+Como é possível ver na Tabela~\ref{tab:contagem_ocorrencias}, atualmente, a maioria (48,45\%) dos dados 
 é coletada via \citeonline{whatsApp}, mas esses envios também ocorrem por outras plataformas 
 como ligações telefônicas, \citeonline{facebook2025}, e-mail, e \citeonline{instagram2025}.
 
