--- a/elementos-textuais/capitulo-8-resultados.tex
+++ b/elementos-textuais/capitulo-8-resultados.tex
@@ -273,7 +273,7 @@ adicionar registros rapidamente.
 \begin{figure}[H]
     \centering
     \includegraphics[height=0.6\textheight]{imagens/meus-registros-figma.png}
-    \caption{Tela de "Meus Registros" com estado ativo de adição de registro (direita).}
+    \caption{Protótipo das telas de "Meus Registros" com estado ativo de adição de registro (direita).}
     \label{fig:prototipo-meus-registros}
 \end{figure}
 \legend{Fonte: Autor}
@@ -290,7 +290,7 @@ que apresentará as opções disponíveis para o usuário selecionar.
 \begin{figure}[H]
     \centering
     \includegraphics[height=0.55\textheight, width=\textwidth]{imagens/registro-simples-figma.png}
-    \caption{Formulário de registro simples. Centro: \textit{bottomsheet} informativa; direita: campo 
+    \caption{Protótipo do formulário de registro simples. Centro: \textit{bottomsheet} informativa; direita: campo 
     adicional ativado.}
     \label{fig:prototipo-registro-simples}
 \end{figure}
@@ -299,7 +299,7 @@ que apresentará as opções disponíveis para o usuário selecionar.
 \begin{figure}[H]
     \centering
     \includegraphics[height=0.6\textheight]{imagens/registro-tecnico-figma.png}
-    \caption{Formulário de registro técnico com campos taxonômicos e detalhamento avançado.}
+    \caption{Protótipo do formulário de registro técnico com campos taxonômicos e detalhamento avançado.}
     \label{fig:prototipo-registro-tecnico}
 \end{figure}
 \legend{Fonte: Autor}
@@ -311,7 +311,7 @@ por todos os usuários.
 \begin{figure}[H]
     \centering
     \includegraphics[height=0.6\textheight]{imagens/registro-pendente-figma.png}
-    \caption{Tela de registros pendentes, acessível apenas a pesquisadores.}
+    \caption{Protótipo da tela de registros pendentes, acessível apenas a pesquisadores.}
     \label{fig:prototipo-registros-pendentes}
 \end{figure}
 \legend{Fonte: Autor}
@@ -325,7 +325,7 @@ para uma visualização em tela cheia, facilitando a análise do registro.
 \begin{figure}[H]
     \centering
     \includegraphics[height=0.55\textheight, width=\textwidth]{imagens/avaliar-registro-figma.png}
-    \caption{Tela de análise de registro. Ao centro, visualização ampliada da imagem.}
+    \caption{Protótipo da tela de análise de registro. Ao centro, visualização ampliada da imagem.}
     \label{fig:prototipo-avaliar-registro}
 \end{figure}
 \legend{Fonte: Autor}
@@ -342,14 +342,14 @@ o usuário verá apenas as informações que ele mesmo enviou.
     \begin{minipage}[b]{0.48\textwidth}
         \centering
         \includegraphics[height=0.6\textheight]{imagens/ver-registro-figma.png}
-        \caption{Visualização de registro validado.}
+        \caption{Protótipo da visualização de registro validado.}
         \label{fig:prototipo-ver-registro-validado}
     \end{minipage}
     \hfill
     \begin{minipage}[b]{0.48\textwidth}
         \centering
         \includegraphics[height=0.6\textheight]{imagens/ve-registro-enviado-figma.png}
-        \caption{Visualização de registro enviado, ainda não avaliado.}
+        \caption{Protótipo da visualização de registro enviado, ainda não avaliado.}
         \label{fig:prototipo-ver-registro-enviado}
     \end{minipage}
 \end{figure}
@@ -362,7 +362,7 @@ em formato de medalhas organizadas em uma grade com três colunas.
 \begin{figure}[H]
     \centering
     \includegraphics[height=0.53\textheight, width=\textwidth]{imagens/perfil-figma.png}
-    \caption{Tela de perfil do usuário com conquistas e histórico.}
+    \caption{Protótipo da tela de perfil do usuário com conquistas e histórico.}
     \label{fig:prototipo-perfil}
 \end{figure}
 \legend{Fonte: Autor}
@@ -375,7 +375,7 @@ tela de detalhes com informações específicas sobre cada animal que for seleci
 \begin{figure}[H]
     \centering
     \includegraphics[height=0.6\textheight]{imagens/fauna-local-figma.png}
-    \caption{Tela de fauna local (esquerda) e detalhes da espécie (direita).}
+    \caption{Protótipo da tela de fauna local (esquerda) e detalhes da espécie (direita).}
     \label{fig:prototipo-fauna-local}
 \end{figure}
 \legend{Fonte: Autor}
@@ -387,7 +387,7 @@ apresentado nesta tela foi o mesmo utilizado em outras telas do aplicativo.
 \begin{figure}[H]
     \centering
     \includegraphics[height=0.53\textheight, width=\textwidth]{imagens/esqueceu-senha-figma.png}
-    \caption{Tela de recuperação de senha: formulário (esquerda), sucesso (centro) e erro de 
+    \caption{Protótipo da tela de recuperação de senha: formulário (esquerda), sucesso (centro) e erro de 
     validação (direita).}
     \label{fig:prototipo-esqueci-senha}
 \end{figure}
