--- a/elementos-textuais/capitulo-3-cronograma.tex
+++ b/elementos-textuais/capitulo-3-cronograma.tex
@@ -1,5 +1,5 @@
 \chapter{Cronograma}\label{cronograma}
-
+% MARCELO 17/05: UNIR COM A SEÇÃO DO CAPÍTULO ANTERIOR.
 O cronograma ilustrado na Tabela ~\ref{tab:cronograma} representa a trajetória de 
 desenvolvimento do projeto ao longo de 16 meses, bem como as divergências e 
 replanejamentos que foram realizados no decorrer do tempo. O trabalho teve seu 
