--- a/elementos-textuais/introducao.tex
+++ b/elementos-textuais/introducao.tex
@@ -32,3 +32,6 @@ análise de dados recebidos, liberando recursos para outras atividades de pesqui
 a participação ativa da comunidade na conservação da biodiversidade costeira e no monitoramento ambiental.
 
 Com este contexto, podemos afirmar que este trabalho possui seu desenvolvimento alinhado com a Agenda 2030 da ONU \cite{onu2015agenda2030}, usando a integração e aplicação de tecnologias no desenvolvimento sustentável, visando abranger os itens 14 (Vida na água), 15 (Vida terrestre) e 9 (Indústria, inovação e infraestrutura). Além disso, o projeto busca promover a difusão e aplicação dos princípios da ciência cidadã, ao facilitar a colaboração entre a comunidade e cientistas. A ciência cidadã amplia a participação pública na pesquisa científica, proporcionando uma abordagem colaborativa e inclusiva na gestão ambiental. Portanto, este trabalho busca não apenas oferecer soluções práticas para o monitoramento da fauna na região costeira do Rio Grande do Sul, mas também promover uma mudança de paradigma na forma como a ciência é realizada, enfatizando a importância da participação e colaboração da comunidade na construção de um futuro sustentável. 
+
+\section{Objetivos}
+%MARCELO 17/05: Escrever o objetivo do trabalho e objetivos secundários.
