Comentarios sobre o trabalho

--- a/elementos-textuais/capitulo-7-estado-atual.tex
+++ b/elementos-textuais/capitulo-7-estado-atual.tex
@@ -1,7 +1,8 @@
 % ----------------------------------------------------------
 \chapter{Diagnóstico do Processo Atual} \label{chapter:diagnostico}
 % ----------------------------------------------------------
-
+% MARCELO 17/05: esse capítulo é um resultado das entrevistas, sendo utilizado para a construção dos requisitos. 
+% Pode unir como seção no próximo capítulo
 \section{Visão Geral do Processo Atual}
 
 O CECLIMAR realiza o monitoramento da fauna costeira por meio de registros enviados pela comunidade, 
